# NetReq

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  architecture.md  cookies.txt  discover_palo_rules.js  docker-compose.yml  find_palo_rule_by_index.js  inspect_anydesk_rules.js  nginx.conf  test_api.js  test_api.py  test_api_v3.js  test_api_v4.js  test_load.py  test_palo_api.js  test_palo_write.js
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs  middleware.rs
backend/src/auth/: jwt.rs  ldap.rs  mod.rs
backend/src/firewall/: fortigate.rs  mod.rs  paloalto.rs
backend/src/handlers/: access.rs
backend/src/mailer/: smtp.rs
backend/src/models/: payloads.rs
frontend/: index.html  login.html  script.js
